--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   "devDependencies": {
     "@vuepress/bundler-vite": "2.0.0-rc.26",
     "http-server": "^14.1.1",
+    "swiper": "^12.0.3",
     "twikoo": "^1.6.44",
     "typescript": "^5.9.3",
-    "vue": "^3.5.22",
+    "vue": "^3.5.24",
     "vuepress": "2.0.0-rc.26",
-    "vuepress-theme-plume": "1.0.0-rc.175"
+    "vuepress-theme-plume": "1.0.0-rc.178"
   },
   "dependencies": {
     "@mdit/plugin-alert": "^0.22.3",
